Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -4,4 +4,4 @@ For information about QMenu for Softimage please visit http://www.keyvis.at/?pag
 For information about Curve Tools for Softimage please visit http://www.keyvis.at/?page_id=671
 
 For information about Ritalin for Maya please visit http://www.keyvis.at/?page_id=695
-and 
+and http://plutometro.blogspot.com
